--- a/src/App.scss
+++ b/src/App.scss
@@ -42,37 +42,14 @@ body {
   width: 50%;
 }
 
-.Log {
-  width: 80%;
-  display: flex;
-  flex-direction: column;
-}
-
-input {
-  width: 50%;
-}
-
 .forButt {
   display: flex;
   flex-direction: column;
   align-items: flex-end;
 }
 
-.TaskBar {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: space-between;
-  box-shadow: 4px 4px 4px 4px rgba(0, 0, 0, 0.25);
-  
-  div {
-    display: flex;
-    flex-direction: column;
-    margin: 5px auto;
-  }
-}
-
 .LoginBlock {
+  margin-top: 5%;
   display: flex;
   flex-direction: row;
   justify-content: space-around;
